--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>Social Links Profile</title>
 </head>
 <body>
-    <div class="profile">
-      <img src="avatar-jessica.jpeg" alt="Jessica">
-      <h1>Jessica Randall</h1>
-      <div class="location"> London, United Kingdom</div>
-       <p>"Front-end developer and avid reader"</p>
-    <div class="button">
+    <header>
+        <img src="avatar-jessica.jpeg" alt="Jessica">
+         <h1>Jessica Randall</h1>
+         <div class="location"> London, United Kingdom</div>
+         <p>"Front-end developer and avid reader"</p>
+    </header>
+    <nav>
       <button>GitHub</button>
       <button>Frontend Mentor</button>
       <button>LinkedIn</button>
       <button>Twitter</button>
       <button>Instagram</button>
-    </div>
-   </div>
+    </nav>
 </body>
 </html>
