--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Social Links Profile</title>
 </head>
 <body>
+   <div class="section">
     <header>
         <img src="avatar-jessica.jpeg" alt="Jessica">
          <h1>Jessica Randall</h1>
@@ -20,5 +21,6 @@
       <button>Twitter</button>
       <button>Instagram</button>
     </nav>
+  </div>
 </body>
 </html>
