--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Social Links Profile</title>
 </head>
 <body>
-   <div class="section">
+   <main class="main">
     <header>
         <img src="avatar-jessica.jpeg" alt="Jessica">
          <h1>Jessica Randall</h1>
@@ -21,6 +21,6 @@
       <button>Twitter</button>
       <button>Instagram</button>
     </nav>
-  </div>
+</main>
 </body>
 </html>
